--- a/src/components/e-collecting/e-collecting.scss
+++ b/src/components/e-collecting/e-collecting.scss
@@ -36,7 +36,7 @@ button {
   button {
     background: rgb(0, 176, 226);
     background: linear-gradient(135deg, rgba(0, 176, 226, 1) 0%, rgba(0, 176, 226, 1) 20%, rgba(151, 187, 115, 1) 100%);
-    color: #000;
+    color: #fff;
   }
 }
 
