--- a/src/components/e-collecting/e-collecting.scss
+++ b/src/components/e-collecting/e-collecting.scss
@@ -12,22 +12,21 @@ button {
   align-items: center;
 
   width: var(--owlly-button-width, inherit);
-  height: var(--owlly-button-height, inherit);
+  height: var(--owlly-button-height, 40px);
 
-  padding: var(--owlly-button-padding, 8px 16px);
+  padding: var(--owlly-button-padding, 8px 12px 8px 8px);
   margin: var(--owlly-button-margin, 12px 10px);
 
-  border-radius: var(--owlly-button-border-radius, 16px);
+  border-radius: var(--owlly-button-border-radius, 8px);
 
   border: none;
 
-  font: inherit;
+  font-family: inherit;
   font-weight: var(--owlly-button-font-weight, normal);
+  font-size: var(--owlly-button-font-size, 1em);
 
   overflow: hidden;
   position: relative;
-
-  box-shadow: var(--owlly-button-box-shadow, 1px 2px 8px 2px rgba(34, 36, 40, 0.2));
 
   cursor: pointer;
 }
@@ -48,10 +47,10 @@ button {
 }
 
 div.logo {
-  margin: 0 4px 0 0;
+  margin: 0 8px 0 0;
 
-  width: 20px;
-  height: 20px;
+  width: 28px;
+  height: 28px;
 
   mask-repeat: no-repeat;
   mask-position: center;
